p-test/172.16.13.2-iptables.txt
172.16.13.2 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:13 2020
*raw
:PREROUTING ACCEPT [13857:3007859]
:OUTPUT ACCEPT [152008:16595294]
COMMIT
# Completed on Thu Nov 26 23:30:13 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:13 2020
*mangle
:PREROUTING ACCEPT [13857:3007859]
:INPUT ACCEPT [13855:3007203]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [152008:16595294]
:POSTROUTING ACCEPT [152014:16595648]
COMMIT
# Completed on Thu Nov 26 23:30:13 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:13 2020
*nat
:PREROUTING ACCEPT [489:121655]
:INPUT ACCEPT [131:32657]
:POSTROUTING ACCEPT [24455:1739494]
:OUTPUT ACCEPT [24455:1739494]
COMMIT
# Completed on Thu Nov 26 23:30:13 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:13 2020
*filter
:INPUT ACCEPT [126:33893]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [152006:16595126]
-A INPUT -s 192.168.1.1/32 -p udp -m udp --dport 53 -j DROP
-A INPUT -s 172.16.0.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.13.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.13.0/24 -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.13.1/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j LOG --log-prefix "SSH Connection: "
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.13.0/24 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j LOG --log-prefix "Logged Traffic: "
-A INPUT -j DROP
-A OUTPUT -p icmp -m icmp --icmp-type 0 -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Thu Nov 26 23:30:13 2020
