p-test/172.16.17.3-iptables.txt
172.16.17.3 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:45 2020
*raw
:PREROUTING ACCEPT [3213:1158178]
:OUTPUT ACCEPT [5848:1322943]
COMMIT
# Completed on Thu Nov 26 23:30:45 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:45 2020
*mangle
:PREROUTING ACCEPT [3213:1158178]
:POSTROUTING ACCEPT [5846:1322833]
:INPUT ACCEPT [3213:1158178]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5848:1322943]
COMMIT
# Completed on Thu Nov 26 23:30:45 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:45 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Thu Nov 26 23:30:45 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:45 2020
*filter
:INPUT ACCEPT [90:12758]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5846:1322833]
:LOGGING - [0:0]
-A INPUT -s 172.16.0.25/32 -p tcp -m tcp --dport 25 -j LOGGING
-A INPUT -s 0.0.0.0/32 -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -s 192.168.17.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -j LOGGING
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -d 192.168.1.4/32 -p udp -m udp --dport 53 -j LOGGING
-A OUTPUT -d 192.168.1.4/32 -p tcp -m tcp --dport 25 -j LOGGING
-A LOGGING -j LOG --log-prefix "Dropped: " --log-level 6
-A LOGGING -j DROP
COMMIT
# Completed on Thu Nov 26 23:30:45 2020
