p-test/172.16.18.2-iptables.txt
172.16.18.2 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:47 2020
*raw
:PREROUTING ACCEPT [129179:257472819]
:OUTPUT ACCEPT [309887:33816819]
COMMIT
# Completed on Thu Nov 26 23:30:47 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:47 2020
*mangle
:PREROUTING ACCEPT [129179:257472819]
:POSTROUTING ACCEPT [309887:33816819]
:INPUT ACCEPT [129176:257472567]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [309887:33816819]
COMMIT
# Completed on Thu Nov 26 23:30:47 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:47 2020
*nat
:PREROUTING ACCEPT [5789:1048356]
:INPUT ACCEPT [2650:159000]
:POSTROUTING ACCEPT [219232:10002022]
:OUTPUT ACCEPT [219232:10002022]
COMMIT
# Completed on Thu Nov 26 23:30:47 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:47 2020
*filter
:INPUT ACCEPT [5:260]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5:600]
:LOGGING - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.18.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.1.1/32 -p udp -m udp --dport 53 -j LOGGING
-A INPUT -s 192.168.1.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.18.0/24 -p icmp -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.18.1/32 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -j LOGGING
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o ens224 -j ACCEPT
-A OUTPUT -o ens192 -j ACCEPT
-A OUTPUT -j REJECT --reject-with icmp-port-unreachable
-A LOGGING -s 192.168.1.1/32 -p udp -m udp --dport 53 -j LOG --log-prefix "DNS connection attempt from 1"
-A LOGGING -s 192.168.1.1/32 -p udp -m udp --dport 53 -j DROP
-A LOGGING -j LOG --log-prefix "Unauthorized Connection Attem"
-A LOGGING -j DROP
COMMIT
# Completed on Thu Nov 26 23:30:47 2020
