p-test/172.16.19.3-iptables.txt
172.16.19.3 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:50 2020
*raw
:PREROUTING ACCEPT [55683:33484906]
:OUTPUT ACCEPT [29113:2923857]
COMMIT
# Completed on Thu Nov 26 23:30:50 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:50 2020
*mangle
:PREROUTING ACCEPT [55683:33484906]
:INPUT ACCEPT [55531:33439334]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [29113:2923857]
:POSTROUTING ACCEPT [29113:2923857]
COMMIT
# Completed on Thu Nov 26 23:30:50 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:50 2020
*nat
:PREROUTING ACCEPT [33678:5107928]
:INPUT ACCEPT [573:41048]
:POSTROUTING ACCEPT [4899:394070]
:OUTPUT ACCEPT [4899:394070]
COMMIT
# Completed on Thu Nov 26 23:30:50 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:50 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [28906:2910919]
:LOGGING - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.19.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 172.16.0.25/32 -p tcp -m tcp --dport 25 -j LOGGING
-A INPUT -j LOGGING
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -d 192.168.1.4/32 -p udp -m udp --dport 53 -j LOGGING
-A OUTPUT -d 192.168.1.4/32 -p tcp -m tcp --sport 25 -j LOGGING
-A LOGGING -j LOG --log-prefix "IPTables-Dropped: " --log-level 6
-A LOGGING -j DROP
COMMIT
# Completed on Thu Nov 26 23:30:50 2020
