p-test/172.16.20.3-iptables.txt
172.16.20.3 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:33 2020
*raw
:PREROUTING ACCEPT [20663:10955005]
:OUTPUT ACCEPT [68737:6555076]
COMMIT
# Completed on Thu Nov 26 23:30:33 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:33 2020
*mangle
:PREROUTING ACCEPT [20663:10955005]
:INPUT ACCEPT [20647:10952061]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [68737:6555076]
:POSTROUTING ACCEPT [75413:6795412]
COMMIT
# Completed on Thu Nov 26 23:30:33 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:33 2020
*nat
:PREROUTING ACCEPT [1832:211159]
:INPUT ACCEPT [16:1038]
:POSTROUTING ACCEPT [8513:579443]
:OUTPUT ACCEPT [8513:579443]
COMMIT
# Completed on Thu Nov 26 23:30:33 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:33 2020
*filter
:INPUT ACCEPT [101:7364]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [68721:6554116]
:LOGGING - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.1.4/32 -p tcp -m tcp --dport 25 -j LOG --log-prefix "Denied Exchange: "
-A INPUT -s 192.168.1.4/32 -p tcp -m tcp --dport 25 -j DROP
-A INPUT -s 172.16.0.25/32 -p tcp -m tcp --dport 25 -j LOG --log-prefix "Denied Email: "
-A INPUT -s 172.16.0.25/32 -p tcp -m tcp --dport 25 -j DROP
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -s 192.168.20.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -j LOG --log-prefix "Unknown OTHER Traffic: "
-A INPUT -j DROP
-A OUTPUT -s 192.168.1.4/32 -p tcp -m tcp --dport 53 -j DROP
-A OUTPUT -s 192.168.1.4/32 -p tcp -m tcp --dport 25 -j DROP
-A OUTPUT -p tcp -m tcp --dport 25 -j ACCEPT
COMMIT
# Completed on Thu Nov 26 23:30:33 2020
