p-test/172.16.22.2-iptables.txt
172.16.22.2 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:51 2020
*security
:INPUT ACCEPT [339:304206]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [523:87255]
COMMIT
# Completed on Thu Nov 26 23:30:51 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:51 2020
*raw
:PREROUTING ACCEPT [733:397884]
:OUTPUT ACCEPT [58711:6909963]
COMMIT
# Completed on Thu Nov 26 23:30:51 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:51 2020
*mangle
:PREROUTING ACCEPT [733:397884]
:INPUT ACCEPT [733:397884]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [58711:6909963]
:POSTROUTING ACCEPT [523:87255]
COMMIT
# Completed on Thu Nov 26 23:30:51 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:51 2020
*nat
:PREROUTING ACCEPT [346:86319]
:INPUT ACCEPT [11:660]
:POSTROUTING ACCEPT [10:1878]
:OUTPUT ACCEPT [29034:2995943]
COMMIT
# Completed on Thu Nov 26 23:30:51 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:51 2020
*filter
:INPUT DROP [394:93678]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [231:36043]
-A INPUT -s 192.168.36.0/24 -p tcp -m tcp --dport 80 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 192.168.22.16/32 -p tcp -m tcp --dport 22 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -s 192.168.22.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -d 192.168.22.16/32 -p tcp -m tcp --sport 22 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.16.0.1/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -d 192.168.22.0/24 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -d 192.168.36.0/24 -p tcp -m tcp --sport 80 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --sport 80 -j ACCEPT
-A OUTPUT -d 172.16.0.1/32 -p tcp -m tcp --sport 22 -m state --state NEW -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.16.0.1/32 -p udp -m udp --sport 53 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Thu Nov 26 23:30:51 2020
