p-test/172.16.23.2-iptables.txt
172.16.23.2 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:42 2020
*raw
:PREROUTING ACCEPT [57087:18451184]
:OUTPUT ACCEPT [62074:12325777]
COMMIT
# Completed on Thu Nov 26 23:30:42 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:42 2020
*mangle
:PREROUTING ACCEPT [57087:18451184]
:INPUT ACCEPT [56428:18394744]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [62074:12325777]
:POSTROUTING ACCEPT [60715:11935025]
COMMIT
# Completed on Thu Nov 26 23:30:42 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:42 2020
*nat
:PREROUTING ACCEPT [8521:847649]
:INPUT ACCEPT [1258:157762]
:POSTROUTING ACCEPT [7847:1465138]
:OUTPUT ACCEPT [9186:1851712]
COMMIT
# Completed on Thu Nov 26 23:30:42 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:42 2020
*filter
:INPUT DROP [16483:9356911]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [56486:11348977]
-A INPUT -s 172.16.0.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.23.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.1.1/32 -p udp -m udp --dport 53 -j DROP
-A INPUT -s 192.168.1.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -s 192.168.23.0/24 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.23.1/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -j LOG --log-prefix "INPUT:DROP:"
-A INPUT -j DROP
COMMIT
# Completed on Thu Nov 26 23:30:42 2020
