p-test/172.16.24.2-iptables.txt
172.16.24.2 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:33 2020
*raw
:PREROUTING ACCEPT [18472:3309718]
:OUTPUT ACCEPT [44495:7640062]
COMMIT
# Completed on Thu Nov 26 23:30:33 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:33 2020
*mangle
:PREROUTING ACCEPT [18472:3309718]
:INPUT ACCEPT [18472:3309718]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [44495:7640062]
:POSTROUTING ACCEPT [44495:7640062]
COMMIT
# Completed on Thu Nov 26 23:30:33 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:33 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Thu Nov 26 23:30:33 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:33 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [44495:7640062]
:LOGGING - [0:0]
-A INPUT -s 192.168.24.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p icmp -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p icmp -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j LOGGING
-A INPUT -j LOGGING
-A LOGGING -p tcp -m tcp --dport 22 -j LOG
-A LOGGING -j LOG
-A LOGGING -p tcp -m tcp --dport 22 -j DROP
-A LOGGING -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Thu Nov 26 23:30:33 2020
