p-test/172.16.26.3-iptables.txt
172.16.26.3 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:31:28 2020
*security
:INPUT ACCEPT [4523:11636383]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5345:530837]
COMMIT
# Completed on Thu Nov 26 23:31:28 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:31:28 2020
*raw
:PREROUTING ACCEPT [4878:11724622]
:OUTPUT ACCEPT [5345:530837]
COMMIT
# Completed on Thu Nov 26 23:31:28 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:31:28 2020
*mangle
:PREROUTING ACCEPT [4878:11724622]
:INPUT ACCEPT [4872:11722654]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5345:530837]
:POSTROUTING ACCEPT [5345:530837]
COMMIT
# Completed on Thu Nov 26 23:31:28 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:31:28 2020
*nat
:PREROUTING ACCEPT [394:91767]
:INPUT ACCEPT [39:3528]
:POSTROUTING ACCEPT [1994:171314]
:OUTPUT ACCEPT [1994:171314]
COMMIT
# Completed on Thu Nov 26 23:31:28 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:31:28 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5345:530837]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 172.16.0.0/16 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 172.16.0.0/16 -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.26.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.26.2/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.26.4/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 172.16.10.2/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.10.2/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.6.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.18.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j LOG --log-prefix "SSH-REJECT " --log-level 6
-A INPUT -p tcp -m tcp --dport 22 -j DROP
-A INPUT -i ens224 -p udp -m udp --sport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -s 192.168.26.0/24 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j LOG --log-prefix "ETC-REJECT " --log-level 6
-A INPUT -j DROP
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Thu Nov 26 23:31:28 2020
