p-test/172.16.29.3-iptables.txt
172.16.29.3 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:39 2020
*nat
:PREROUTING ACCEPT [296:74059]
:INPUT ACCEPT [4:240]
:POSTROUTING ACCEPT [1256:77697]
:OUTPUT ACCEPT [1256:77697]
COMMIT
# Completed on Thu Nov 26 23:30:39 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:39 2020
*raw
:PREROUTING ACCEPT [540:365405]
:OUTPUT ACCEPT [2703:193405]
COMMIT
# Completed on Thu Nov 26 23:30:39 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:39 2020
*mangle
:PREROUTING ACCEPT [540:365405]
:POSTROUTING ACCEPT [2703:193405]
:INPUT ACCEPT [536:364093]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2703:193405]
COMMIT
# Completed on Thu Nov 26 23:30:39 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:39 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2703:193405]
:LOGDROP - [0:0]
-A INPUT -p tcp -m tcp --sport 25 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 172.16.0.25/32 -p tcp -m tcp --dport 25 -j DROP
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -d 192.168.1.4/32 -p udp -m udp --dport 53 -m conntrack --ctstate NEW,ESTABLISHED -j REJECT --reject-with icmp-port-unreachable
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.29.1/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.29.0/24 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.1.4/32 -p tcp -m tcp --dport 25 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -s 172.16.0.25/32 -p tcp -m tcp --dport 25 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.1.4/32 -p tcp -m tcp --dport 25 -m conntrack --ctstate NEW,ESTABLISHED -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j LOGDROP
-A OUTPUT -d 192.168.1.4/32 -p udp -m udp --dport 53 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A OUTPUT -d 192.168.1.4/32 -p tcp -m tcp --dport 25 -j REJECT --reject-with icmp-port-unreachable
-A LOGDROP -j LOG --log-prefix "INPUT:DROP:" --log-level 6
-A LOGDROP -j DROP
COMMIT
# Completed on Thu Nov 26 23:30:39 2020
