p-test/172.16.5.3-iptables.txt
172.16.5.3 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:29 2020
*filter
:INPUT ACCEPT [242:31605]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [53189:9249290]
-A INPUT -s 192.168.5.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 172.16.0.25/32 -p tcp -m tcp --dport 25 -j DROP
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -j LOG --log-prefix DROP
-A INPUT -j DROP
-A OUTPUT -d 192.168.1.4/32 -p udp -m udp --dport 53 -j DROP
-A OUTPUT -d 192.168.1.4/32 -p tcp -m tcp --dport 25 -j DROP
COMMIT
# Completed on Thu Nov 26 23:30:29 2020
