p-test/172.16.6.2-iptables.txt
172.16.6.2 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:31:28 2020
*raw
:PREROUTING ACCEPT [1236:661727]
:OUTPUT ACCEPT [20620:2488889]
COMMIT
# Completed on Thu Nov 26 23:31:28 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:31:28 2020
*mangle
:PREROUTING ACCEPT [1236:661727]
:POSTROUTING ACCEPT [595:82953]
:INPUT ACCEPT [1236:661727]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [20620:2488889]
COMMIT
# Completed on Thu Nov 26 23:31:28 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:31:28 2020
*nat
:PREROUTING ACCEPT [596:103907]
:INPUT ACCEPT [8:480]
:POSTROUTING ACCEPT [4:232]
:OUTPUT ACCEPT [10064:1066350]
COMMIT
# Completed on Thu Nov 26 23:31:28 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:31:28 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [54:8009]
-A INPUT -s 192.168.36.0/24 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p udp -m udp --dport 53 -j DROP
-A INPUT -s 192.168.6.16/32 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j DROP
-A INPUT -s 192.168.6.0/24 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -j DROP
-A OUTPUT -d 192.168.36.0/24 -p tcp -m tcp --sport 80 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --sport 80 -j ACCEPT
-A OUTPUT -d 172.16.0.1/32 -p udp -m udp --sport 53 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.16.0.1/32 -p tcp -m tcp --dport 22 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.168.6.16/32 -p tcp -m tcp --sport 22 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.168.6.0/24 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -d 172.16.0.1/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Thu Nov 26 23:31:28 2020
