p-test/172.16.8.4-iptables.txt
172.16.8.4 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:36 2020
*security
:INPUT ACCEPT [2278:1264833]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [6480:1183794]
COMMIT
# Completed on Thu Nov 26 23:30:36 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:36 2020
*raw
:PREROUTING ACCEPT [4793:1992754]
:OUTPUT ACCEPT [6475:1183308]
COMMIT
# Completed on Thu Nov 26 23:30:36 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:36 2020
*mangle
:PREROUTING ACCEPT [4793:1992754]
:INPUT ACCEPT [4793:1992754]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [6475:1183308]
:POSTROUTING ACCEPT [6467:1182783]
COMMIT
# Completed on Thu Nov 26 23:30:36 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:36 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Thu Nov 26 23:30:36 2020
# Generated by iptables-save v1.8.4 on Thu Nov 26 23:30:36 2020
*filter
:INPUT ACCEPT [71:600079]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [72:4199]
-A INPUT -s 192.168.8.1/32 -d 192.168.8.51/32 -p udp -m udp --dport 514 -j DROP
-A INPUT -s 192.168.8.0/24 -d 192.168.8.51/32 -p udp -m udp --dport 514 -j ACCEPT
-A INPUT -s 192.168.1.4/32 -d 192.168.8.51/32 -p udp -m udp --dport 514 -j ACCEPT
-A INPUT -s 192.168.8.36/32 -p tcp -m tcp --dport 22 -j DROP
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.8.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.16.0.1/32 -p tcp -m tcp --dport 22 -j DROP
-A OUTPUT -d 172.16.0.1/32 -p udp -m udp --dport 53 -j DROP
-A OUTPUT -j ACCEPT
COMMIT
# Completed on Thu Nov 26 23:30:36 2020
